git-ops/charts/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-vault
  namespace: code-vault

spec:
  ingressClassName: nginx

  rules:
    - host: codevault.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 3000

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 8080
